<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    tools:context="com.example.peter.midterm.MainActivity">
<View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.02"
    />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:textSize="30dp"
        android:background="@drawable/title"
        android:textColor="@android:color/white"
        android:text="@string/quiz" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.02"
        />
    <TextView
        android:id="@+id/textView2"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textColor="@android:color/black"
        android:text="@string/question" />

    <RadioGroup
        android:id="@+id/rg_radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/option3" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/option4" />

    </RadioGroup>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.07"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="Submit" />
    <View
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.05" />
</LinearLayout>
